aws_eks_ingress_certmanager/k8s-ingress/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kruta.link
    secretName: kruta.link
  defaultBackend:
    service:
      name: app-01
      port:
        number: 80
  rules:
  - host: kruta.link
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-01
              port:
                number: 80
